--- a/TicketsAPI.Infrastructure/TicketsAPI.Infrastructure.csproj
+++ b/TicketsAPI.Infrastructure/TicketsAPI.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TicketsAPI.Application\TicketsAPI.Application.csproj" />
+  </ItemGroup>
+
 </Project>
